--- a/Exp3/medidor_largura_restored/medidor_largura.qsf
+++ b/Exp3/medidor_largura_restored/medidor_largura.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CEBA4F23C7
 set_global_assignment -name TOP_LEVEL_ENTITY medidor_largura
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 16.1.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "00:35:26  JANUARY 19, 2020"
-set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Standard Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "16.1.0 Lite Edition"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
 set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
@@ -55,9 +55,36 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT "VERILOG HDL" -section_id eda
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_location_assignment PIN_U7 -to clock
+set_location_assignment PIN_N16 -to clock
 set_location_assignment PIN_AA1 -to db_clock
 set_location_assignment PIN_U21 -to display0[0]
+set_location_assignment PIN_V21 -to display0[1]
+set_location_assignment PIN_W22 -to display0[2]
+set_location_assignment PIN_W21 -to display0[3]
+set_location_assignment PIN_Y22 -to display0[4]
+set_location_assignment PIN_Y21 -to display0[5]
+set_location_assignment PIN_AA22 -to display0[6]
+set_location_assignment PIN_AA20 -to display1[0]
+set_location_assignment PIN_AB20 -to display1[1]
+set_location_assignment PIN_AA19 -to display1[2]
+set_location_assignment PIN_AA18 -to display1[3]
+set_location_assignment PIN_AB18 -to display1[4]
+set_location_assignment PIN_AA17 -to display1[5]
+set_location_assignment PIN_U22 -to display1[6]
+set_location_assignment PIN_U13 -to reset
+set_location_assignment PIN_V13 -to liga
+set_location_assignment PIN_T13 -to sinal
+set_location_assignment PIN_U20 -to display5[0]
+set_location_assignment PIN_Y20 -to display5[1]
+set_location_assignment PIN_V20 -to display5[2]
+set_location_assignment PIN_U16 -to display5[3]
+set_location_assignment PIN_U15 -to display5[4]
+set_location_assignment PIN_Y15 -to display5[5]
+set_location_assignment PIN_P9 -to display5[6]
+set_location_assignment PIN_AA2 -to fim
+set_location_assignment PIN_L1 -to pronto
+set_location_assignment PIN_Y3 -to db_contaCont
+set_location_assignment PIN_W2 -to db_zeraCont
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
 set_global_assignment -name VHDL_FILE medidor_largura.vhd
 set_global_assignment -name VHDL_FILE hexa7seg.vhd
@@ -65,5 +92,8 @@ set_global_assignment -name VHDL_FILE contador_163.vhd
 set_global_assignment -name VHDL_FILE contador8bits.vhd
 set_global_assignment -name VHDL_FILE controlador.vhd
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform.vwf
-set_global_assignment -name VHDL_FILE output_files/medidor_largura.vhd
-set_global_assignment -name CDF_FILE output_files/Chain3.cdf
+set_global_assignment -name CDF_FILE output_files/Chain6.cdf
+set_global_assignment -name CDF_FILE output_files/Chain7.cdf
+set_global_assignment -name CDF_FILE output_files/Chain8.cdf
+set_global_assignment -name CDF_FILE Chain9.cdf
+set_global_assignment -name VHDL_FILE ../medidor_largura.vhd
